--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
 	<title>Brafé 1</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<link rel="stylesheet" type="text/css" href="css/grid.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
+	
 	<header class="menu">
-		<div class="menu-container">
-			<a class="menu-logo" href="#"><img src="img/brafe.png" alt="Brafé"></a>
+		<div class="container">
+			<a class="menu-logo" href="#"><img src="img/brafe.png" alt="Brafé"></a>	
 			<nav class="menu-nav">
 				<ul>
 					<li><a href="#">Sobre</a></li>
@@ -28,12 +30,12 @@
 	
 	<section class="sobre">
 		<h2>Uma Mistura de</h2>
-		<div class="sobre-container">
-			<div class="sobre-item">
+		<div class="container">
+			<div class="sobre-item  grid-6">
 				<img src="img/cafe-1.jpg">
 				<h3>amor</h3>
 			</div>
-			<div class="sobre-item">
+			<div class="sobre-item  grid-6">
 				<img src="img/cafe-2.jpg">
 				<h3>perfeição</h3>
 			</div>
@@ -43,7 +45,7 @@ aente quente, mas também pode ser consumido gelado. Ele é um estimulante, por 
 	</section>
 	
 	<section class="produtos">
-		<div class="produtos-container">
+		<div class="container">
 			<div class="produtos-item">
 				<h2 class="produtos-paulista">Paulista</h2>
 				<p>As condições climáticas não eram as melhores nessa primeira escolha e, entre 1800 e 1850, tentou-se o cultivo noutras regiões: o João Alberto Castelo Branco trouxe mudas do Pará</p>
@@ -57,10 +59,10 @@ aente quente, mas também pode ser consumido gelado. Ele é um estimulante, por 
 				<p>As condições climáticas não eram as melhores nessa primeira escolha e, entre 1800 e 1850, tentou-se o cultivo noutras regiões: o João Alberto Castelo Branco trouxe mudas do Pará</p>
 			</div>
 		</div>
-		<a class="produto-btn" href="#">Saiba Mais</a>
+		<a class="produtos-btn" href="#">Saiba Mais</a>
 	</section>
 	
-	<section class="locais">
+	<section class="locais container">
 		<div class="locais-item">
 			<img src="img/botafogo.jpg" alt="Brafé unidade Botafogo">
 			<div>
@@ -87,10 +89,11 @@ aente quente, mas também pode ser consumido gelado. Ele é um estimulante, por 
 				<a href="#">Ver Mapa</a>
 			</div>
 		</div>
+	
 	</section>
 	
-	<section class="assine"> 
-		<div class="assine-container">
+	<section class="assine">
+		<div class="container">
 			<div class="assine-info">
 				<h2>Assine Nossa Newsletter</h2>
 				<p>promoções e eventos mensais</p>
@@ -104,7 +107,7 @@ aente quente, mas também pode ser consumido gelado. Ele é um estimulante, por 
 	</section>
 	
 	<footer class="footer">
-		<div class="footer-container">
+		<div class="container">
 			<p>Este é um projeto da Origamid. Mais em origamid.com<br>Praia de Botafogo, 300, 5º andar - Botafogo - Rio de Janeiro</p>
 			<img src="img/brafe.png" alt="Brafé">
 		</div>
