--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<header class="menu">
 		<div class="container">
 			<a class="menu-logo grid-4" href="#"><img src="img/brafe.png" alt="Brafé"></a>	
-			<nav class="menu-nav grid-8">
+			<nav class="menu-nav">
 				<ul>
 					<li><a href="#">Sobre</a></li>
 					<li><a href="#">Produtos</a></li>
