--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ aente quente, mas também pode ser consumido gelado. Ele é um estimulante, por 
 			<div class="grid-6">
 				<img src="img/botafogo.jpg" alt="Brafé unidade Botafogo">
 			</div>
-			<div>
+			<div class="grid-6">
 				<h2>Botafogo</h2>
 				<p>As condições climáticas não eram as melhores nessa primeira escolha e, entre 1800 e 1850, tentou-se o cultivo.</p>
 				<a href="#">Ver Mapa</a>
@@ -78,7 +78,7 @@ aente quente, mas também pode ser consumido gelado. Ele é um estimulante, por 
 			<div class="grid-6">
 				<img src="img/iguatemi.jpg" alt="Brafé unidade Iguatemi">
 			</div>
-			<div>
+			<div class="grid-6">
 				<h2>Iguatemi</h2>
 				<p>As condições climáticas não eram as melhores nessa primeira escolha e, entre 1800 e 1850, tentou-se o cultivo.</p>
 				<a href="#">Ver Mapa</a>
@@ -89,7 +89,7 @@ aente quente, mas também pode ser consumido gelado. Ele é um estimulante, por 
 			<div class="grid-6">
 				<img src="img/botafogo.jpg" alt="Brafé unidade Mineirão">
 			</div>
-			<div>
+			<div class="grid-6">
 				<h2>Mineirão</h2>
 				<p>As condições climáticas não eram as melhores nessa primeira escolha e, entre 1800 e 1850, tentou-se o cultivo.</p>
 				<a href="#">Ver Mapa</a>
